style.css
html {
  background:lightgray
}

div.blog {
  padding: 10px 20% 0px 20%;
  text-align: left;
}

.active {
	background-color: #098859;
}

ul.contact {
	list-style-type: none;
}

li.contact {
	display: inline;
}

li a.contact {
	color: black;
	display: inline;
}

li a:hover.contact {
	background-color: lightgray;
}

ul.bar {
	list-style-type: none;
	margin: 0% 20% 0% 20%;
	padding: 0;
	overflow: hidden;
	background-color: rgb(51, 51, 51);
	position: -webkit-sticky; /* Safari */
  	position: sticky;
  	top: 0;
}
  
li.bar {
	float: left;
}

img.ww {
    height: 450px;
	object-fit: cover;
	
}
img.ww2 {
    height: 175px;
	object-fit: cover;
}
img.ww3 {
    height: 100px;
	object-fit: cover;
}

li a {
	display: block;
	color: white;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
}
  
/* Change the link color to #111 (black) on hover */
li a:hover {
	background-color: rgb(17, 17, 17);
}
h1 {
	padding: 10px 20% 0px 20%;
	text-align: center;
}

img.port {
	height: 250px;
	width: 315px;
	object-fit: cover;
	margin-left: auto;
	margin-right: auto;
}

span.port {
position: relative;
text-align: center;
}

.bottom-right {
	position: absolute;
	bottom: 0px;
	left: 16px;
	font-size: large;
	background-color: white;
}

.top-left {
	position: absolute;
	bottom: 210px;
	right: 16px;
	font-size: large;
	background-color: white;
  }

